--- a/views/movies.erb
+++ b/views/movies.erb
@@ -4,7 +4,7 @@
 </header>
 <h1> Let's Play Movie Trivia!</h1>
 <body>
-	<form action='/movies' method='post'>
+	<form action='/list_movies' method='post'>
 		<input type="text" name="movie">
 		<input type="submit" value="Search Movies">
 	</form>
